CHANGELOG

== June 24, 2012
* Updated Gems
* Bundled AnyTime into a Gem

== June 23, 2012
* Improved meta tags based on google webmaster info
* Added Site Links to top menu
* Changed from H2 to H1 on landing page
* Addded H1 header on tag/language pages
* Code cleanup
* Rspec tests added

== June 22, 2012
* Added Authors to top menu
* Added poll_interval to sidekiq
* Improved CSS for comments
* Updated Gems
* Fix modernizr on ipad
* set default items_count to 0
* Rearanged Asset files into vendor
* Serving twitter widgets.js from own domain

== June 22, 2012
* Added registration reason to edit profil
* Updated Gems
* Tuned postgresql.conf

== June 20, 2012
* Added WindowsLive connect
* Improved Admin interface for users/admin_users
* re-aranged Admin Dashboard
* Added links to admin (WIP)
* Updated Gems

== June 19, 2012
* Improved Welcome Email

== June 18, 2012
* Updated robots.txt
* Updated Gems
* fixed missing font errors
* Welcome Email (testing)
* updated Rspec Tests

== June 17, 2012
* Updated URL to have item ID i.e. "123-headline-big-news"
* Improved ipad portrait mode

== June 16, 2012
* Add ability to upload documents
* Fixed bug on attachments page
* Updated robots.txt to ignore some bots and paths
* Lots of improvements for small mobile screens
* Improved iphone 3g/3gs, android, blackberry support
* Updated Gems

== June 15, 2012
* Updated Rails and Sunspot SOLR
* Security Update
* Updated gems
* font size fixed for highlights on CCS3 browsers
* Added Item title to posterous share button

== June 14, 2012
* Fixed blockquote font color, was too light
* Added time ago for published items
* Updated gems
* Updated Twitter Bootstrap

== June 12-13, 2012
* made font slightly darker
* Improved admin performance
* Updated gems
* Admin User must set the published date
* Allow to reuse images on new items

== June 9, 2012
* Added some nice filters to admin/items
* updated gems
* Added scopes for refractoring
* added original ticker

== June 7, 2012