@@ -2,7 +2,7 @@
 ActiveAdmin.register EmailDelivery do
   controller.authorize_resource
   config.comments = false
-  menu parent: "Members", priority: 57, label: "Email Delivery", if: lambda{|tabs_renderer|
+  menu parent: "Items", priority: 14, label: "Email Delivery", if: lambda{|tabs_renderer|
     controller.current_ability.can?(:manage, EmailDelivery)
   }
   actions  :index, :destroy
