@@ -5,14 +5,14 @@ ActiveAdmin.register TwitterShare do
   menu parent: "Items", priority: 12, label: "Twitter Shares", if: lambda{|tabs_renderer|
     controller.current_ability.can?(:manage, TwitterShare)
   }
-  actions  :index
+  actions  :index, :destroy
   index do
-    id_column
     column :item
     column :status
     column "Job Time", :enqueue_at
     column "Completed At", :processed_at
     column :created_at
+    default_actions
   end
   
 end
